set nodata (-9999) and apply minor changes

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As a data processor developer, I want to implement, and package an algorithm processing a pair of S1 SAR SLC datasets using the SNAP toolbox notebook archetype."
+    "Algorithm to detect SAR amplitude changes (b0) related to landslide events from pre- and post-earthquake Sentinel-1 IW-SLC acquisitions (slave, master)."
    ]
   },
   {
@@ -155,8 +155,6 @@
    },
    "outputs": [],
    "source": [
-    "#input_identifiers = ('S1A_IW_SLC__1SDV_20161030T163141_20161030T163208_013722_01603F_4094', 'S1A_IW_SLC__1SDV_20161018T163141_20161018T163208_013547_015AEB_5994')\n",
-    "\n",
     "input_identifiers = ('S1A_IW_SLC__1SDV_20161107T170553_20161107T170620_013839_0163F7_A66D', 'S1A_IW_SLC__1SDV_20161026T170553_20161026T170620_013664_015E7F_BD83')"
    ]
   },
@@ -180,8 +178,6 @@
    },
    "outputs": [],
    "source": [
-    "#input_references = ('https://catalog.terradue.com/sentinel1/search?format=atom&uid=S1A_IW_SLC__1SDV_20161030T163141_20161030T163208_013722_01603F_4094', 'https://catalog.terradue.com/sentinel1/search?format=atom&uid=S1A_IW_SLC__1SDV_20161018T163141_20161018T163208_013547_015AEB_5994')\n",
-    "\n",
     "input_references = ('https://catalog.terradue.com/sentinel1/search?format=atom&uid=S1A_IW_SLC__1SDV_20161107T170553_20161107T170620_013839_0163F7_A66D','https://catalog.terradue.com/sentinel1/search?format=atom&uid=S1A_IW_SLC__1SDV_20161026T170553_20161026T170620_013664_015E7F_BD83')"
    ]
   },
@@ -252,7 +248,9 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "import shutil"
+    "import shutil\n",
+    "\n",
+    "import gdal"
    ]
   },
   {
@@ -385,17 +383,17 @@
     "        \n",
     "            self.save_graph(filename=path)\n",
     "            \n",
-    "            #options = ['/opt/snap6/bin/gpt',\n",
-    "            #   '-x',\n",
-    "            #   '-c',\n",
-    "            #   '2048M',\n",
-    "            #   path]\n",
-    "            \n",
-    "            options = ['/workspace/temp/temp/snap6/snap6/bin/gpt',\n",
+    "            options = ['/opt/snap6/bin/gpt',\n",
     "               '-x',\n",
     "               '-c',\n",
     "               '2048M',\n",
     "               path]\n",
+    "            \n",
+    "            #options = ['/workspace/temp/temp/snap6/snap6/bin/gpt',\n",
+    "            #   '-x',\n",
+    "            #   '-c',\n",
+    "            #   '2048M',\n",
+    "            #   path]\n",
     "\n",
     "            p = subprocess.Popen(options,\n",
     "                stdout=subprocess.PIPE, stdin=subprocess.PIPE, stderr=subprocess.PIPE)\n",
@@ -431,7 +429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 0. Get metadata"
+    "#### 0. Get S-1 metadata"
    ]
   },
   {
@@ -485,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Slave preprocessing"
+    "#### 1. Slave image pre-processing"
    ]
   },
   {
@@ -513,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.1. Read s-1 product (slave)"
+    "##### 1.1. Read s-1 product (slave)"
    ]
   },
   {
@@ -558,7 +556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.2. Apply orbit file"
+    "##### 1.2. Apply orbit file"
    ]
   },
   {
@@ -607,7 +605,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.3. TOPSAR split"
+    "##### 1.3. TOPSAR split"
    ]
   },
   {
@@ -665,7 +663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.4. ThermalNoiseRemoval"
+    "##### 1.4. ThermalNoiseRemoval"
    ]
   },
   {
@@ -721,7 +719,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.5. Calibration"
+    "##### 1.5. Calibration"
    ]
   },
   {
@@ -783,7 +781,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.6. TOPSAR-Deburst"
+    "##### 1.6. TOPSAR-Deburst"
    ]
   },
   {
@@ -838,7 +836,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.7. TOPSAR-Merge"
+    "##### 1.7. TOPSAR-Merge"
    ]
   },
   {
@@ -894,7 +892,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.8. Multilook"
+    "##### 1.8. Multilook"
    ]
   },
   {
@@ -953,7 +951,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.9. Write"
+    "##### 1.9. Write"
    ]
   },
   {
@@ -1013,7 +1011,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.10. Run"
+    "##### 1.10. Run"
    ]
   },
   {
@@ -1029,7 +1027,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Master preprocessing"
+    "#### 2. Master pre-processing"
    ]
   },
   {
@@ -1045,7 +1043,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.1. Read s-1 product (master)"
+    "##### 2.1. Read s-1 product (master)"
    ]
   },
   {
@@ -1090,7 +1088,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.2. Apply orbit file"
+    "##### 2.2. Apply orbit file"
    ]
   },
   {
@@ -1139,7 +1137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3. TOPSAR split"
+    "##### 2.3. TOPSAR split"
    ]
   },
   {
@@ -1197,7 +1195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.4. ThermalNoiseRemoval"
+    "##### 2.4. ThermalNoiseRemoval"
    ]
   },
   {
@@ -1253,7 +1251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.5. Calibration"
+    "##### 2.5. Calibration"
    ]
   },
   {
@@ -1314,7 +1312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.6. TOPSAR-Deburst"
+    "##### 2.6. TOPSAR-Deburst"
    ]
   },
   {
@@ -1369,7 +1367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.7. TOPSAR-Merge"
+    "##### 2.7. TOPSAR-Merge"
    ]
   },
   {
@@ -1425,7 +1423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.8. Multilook"
+    "##### 2.8. Multilook"
    ]
   },
   {
@@ -1484,7 +1482,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.9. Write"
+    "##### 2.9. Write"
    ]
   },
   {
@@ -1544,7 +1542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.10. Run"
+    "##### 2.10. Run"
    ]
   },
   {
@@ -1560,7 +1558,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Processing"
+    "#### 3. Processing"
    ]
   },
   {
@@ -1576,7 +1574,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.1. Read slave and master products"
+    "##### 3.1. Read slave and master products"
    ]
   },
   {
@@ -1625,17 +1623,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.2. DEM-Assisted-Coregistration"
+    "##### 3.2. DEM-Assisted-Coregistration"
    ]
   },
   {
@@ -1644,7 +1635,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: look at resamplingType\n",
     "operator = 'DEM-Assisted-Coregistration'\n",
     "\n",
     "parameters = dict()\n",
@@ -1696,7 +1686,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.3. Speckle-Filter"
+    "##### 3.3. Speckle-Filter"
    ]
   },
   {
@@ -1761,7 +1751,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.4. BandMaths"
+    "##### 3.4. BandMaths"
    ]
   },
   {
@@ -1785,7 +1775,7 @@
     "\n",
     "expression_str = 'log( Beta0_VV_slv1_{0} / Beta0_VV_mst_{1})'.format(slv_date_str, mst_date_str)\n",
     "        \n",
-    "targetbandsdic = {'targetBand': {'name': 'dif', 'type': 'float32', 'expression': expression_str, 'description': None, 'unit': None, 'noDataValue': '0.0'}}\n",
+    "targetbandsdic = {'targetBand': {'name': 'dif', 'type': 'float32', 'expression': expression_str, 'description': None, 'unit': None, 'noDataValue': '-9999'}}\n",
     "\n",
     "\n",
     "parameters['targetBands'] = targetbandsdic\n",
@@ -1827,7 +1817,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.5. Ellipsoid-Correction-RD"
+    "##### 3.5. Ellipsoid-Correction-RD"
    ]
   },
   {
@@ -1888,7 +1878,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.6. Write"
+    "##### 3.6. Write"
    ]
   },
   {
@@ -1958,7 +1948,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.7. Run"
+    "##### 3.7. Run"
    ]
   },
   {
@@ -1974,7 +1964,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### To tiff"
+    "#### Write result in GeoTIFF"
    ]
   },
   {
@@ -1994,16 +1984,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "temp_tif_name = os.path.join(temp_folder, output_name + '.tif')\n",
+    "\n",
     "ProductIO.writeProduct(b0ch, \n",
-    "                       output_name + '.tif',\n",
+    "                       temp_tif_name,\n",
     "                       'GeoTIFF-BigTiff')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to set no data value in the geotiff file \n",
+    "\n",
+    "dataset = gdal.Open(temp_tif_name)\n",
+    "\n",
+    "gdal.Translate(output_name + '.tif', dataset, noData=-9999)\n",
+    "\n",
+    "dataset = None"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Metadata"
+    "#### Write metadata files"
    ]
   },
   {
@@ -2163,8 +2170,8 @@
    "source": [
     "shutil.rmtree(temp_folder)\n",
     "\n",
-    "#shutil.rmtree(output_name + '.data')\n",
-    "#os.remove(output_name + '.dim')"
+    "shutil.rmtree(output_name + '.data')\n",
+    "os.remove(output_name + '.dim')"
    ]
   },
   {
@@ -2175,7 +2182,7 @@
     }
    },
    "source": [
-    "### License"
+    "### <a name=\"License\"> License"
    ]
   },
   {
