use Terrain-Correction instead of Ellipsoid-Correction-RD

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -1826,6 +1826,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "operator = 'Ellipsoid-Correction-RD'\n",
     "\n",
     "parameters = dict()\n",
@@ -1841,7 +1842,8 @@
     "    #elif param.getName() == 'mapProjection':\n",
     "    #    parameters[param.getName()] = \"GEOGCS[&quot;WGS84(DD)&quot;, &#xd;DATUM[&quot;WGS84&quot;, &#xd;SPHEROID[&quot;WGS84&quot;, 6378137.0, 298.257223563]], &#xd;PRIMEM[&quot;Greenwich&quot;, 0.0], &#xd;UNIT[&quot;degree&quot;, 0.017453292519943295], &#xd;AXIS[&quot;Geodetic longitude&quot;, EAST], &#xd;AXIS[&quot;Geodetic latitude&quot;, NORTH]]\"\n",
     "    else:\n",
-    "        parameters[param.getName()] = param.getDefaultValue()\n"
+    "        parameters[param.getName()] = param.getDefaultValue()\n",
+    "'''"
    ]
   },
   {
@@ -1850,6 +1852,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "ellip_nodes = []\n",
     "\n",
     "node_id = 'Ellipsoid-Correction-RD'\n",
@@ -1862,7 +1865,46 @@
     "\n",
     "print(node_id)\n",
     "    \n",
-    "print(source_nodes)"
+    "print(source_nodes)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "operator = 'Terrain-Correction'\n",
+    "\n",
+    "parameters = dict()\n",
+    "\n",
+    "for param in get_snap_parameters(operator):\n",
+    "    \n",
+    "    print(param.getName(), param.getDefaultValue())\n",
+    "    \n",
+    "    parameters[param.getName()] = param.getDefaultValue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ellip_nodes = []\n",
+    "\n",
+    "node_id = 'Terrain-Correction'\n",
+    "\n",
+    "source_nodes = math_nodes[0]\n",
+    "\n",
+    "mygraph.add_node(node_id, operator, parameters, source_nodes)\n",
+    "\n",
+    "ellip_nodes.append(node_id)\n",
+    "\n",
+    "print(node_id)\n",
+    "    \n",
+    "print(source_nodes)\n"
    ]
   },
   {
