change from xml to properties

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -2175,10 +2175,33 @@
     "search[0]['startdate'] = start_date\n",
     "search[0]['enddate'] = end_date\n",
     "\n",
-    "eop_xml = os.path.join(output_path, output_name + '.xml')\n",
+    "#eop_xml = os.path.join(output_path, output_name + '.xml')\n",
+    "#with open(eop_xml, 'wb') as file:\n",
+    "#    file.write('<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n')\n",
+    "#    file.write(eop_metadata(search[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eop_xml = os.path.join(output_path, output_name + '.properties')\n",
     "with open(eop_xml, 'wb') as file:\n",
-    "    file.write('<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n')\n",
-    "    file.write(eop_metadata(search[0]))"
+    "    \n",
+    "    file.write('title=%s\\n' % 'Output ' + output_name + '.tif')\n",
+    "    file.write('date=%s/%s\\n' % (start_date, end_date))\n",
+    "    \n",
+    "    \n",
+    "    file.write('Master\\\\ SLC\\\\ Product = %s\\n' % input_identifiers_slv_mst[1])\n",
+    "    file.write('Slave\\\\ SLC\\\\ Product = %s\\n' % input_identifiers_slv_mst[0])\n",
+    "\n",
+    "\n",
+    "    file.write('Relative\\\\ Orbit\\\\ Number = %s\\n' % s1metadic['relativeOrbitNumber'])\n",
+    "    \n",
+    "    \n",
+    "    file.write('geometry=%s' % (search[0]['wkt']))"
    ]
   },
   {
@@ -2270,7 +2293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
